[package]
name = "phase_snn"
version = "0.1.0"
edition = "2021"
description = "Phase-SNN inference engine — CPU, no Python runtime"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
num-complex = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "phase_snn_inference"
path = "src/main.rs"
